# optimized-routines

./: .clang-format  .editorconfig  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  MAINTAINERS  MAINTAINERS.md  Makefile  README  README.md  Root  Android 8.0  config.mk.dist  toolchain-clang.cmake  toolchain-gcc.cmake
.github/: labeler.yml
.github/workflows/: c-cpp.yml  greetings.yml  labeler.yml  tests.yml
auxiliary/: remez.jl
fp/: Dir.mk  README.contributors  README.md
fp/armv6-m/: dcmp.h  dcmp_bool_eq.S  dcmp_bool_ge.S  dcmp_bool_gt.S  dcmp_bool_le.S  dcmp_bool_lt.S  dcmp_bool_un.S  dcmp_flags.S  dcmp_flags_eq.S  dcmp_flags_rev.S  dcmp_gnu_cmp.S  dcmp_gnu_rcmp.S  faddsub.S  fcmp.h  fcmp_bool_eq.S  fcmp_bool_ge.S  fcmp_bool_gt.S  fcmp_bool_le.S  fcmp_bool_lt.S  fcmp_bool_un.S  fcmp_flags.S  fcmp_flags_eq.S  fcmp_flags_rev.S  fcmp_gnu_cmp.S  fcmp_gnu_rcmp.S  fmul.S
fp/at32/: d2f.S  d2iz.S  d2lz.S  d2uiz.S  d2ulz.S  daddsub.S  dcmp.h  dcmp_bool_eq.S  dcmp_bool_ge.S  dcmp_bool_gt.S  dcmp_bool_le.S  dcmp_bool_lt.S  dcmp_bool_un.S  dcmp_flags.S  dcmp_flags_eq.S  dcmp_flags_rev.S  dcmp_gnu_cmp.S  dcmp_gnu_rcmp.S  ddiv.S  dmul.S  f2d.S  f2iz.S  f2lz.S  f2uiz.S  f2ulz.S  faddsub.S  fcmp.h  fcmp_bool_eq.S  fcmp_bool_ge.S  fcmp_bool_gt.S  fcmp_bool_le.S  fcmp_bool_lt.S  fcmp_bool_un.S  fcmp_flags.S  fcmp_flags_rev.S  fcmp_gnu_cmp.S  fcmp_gnu_rcmp.S  fdiv.S  fmul.S  i2d.S  (+6 more)
fp/aux/: ddiv-prove.py
fp/auxiliary/: ddiv-diagnostics.c  ddiv-prove.py
fp/common/: dnan2.c  dnorm2.c  dunder.c  fnan2.c  fnorm2.c  funder.c
fp/include/: diagnostics.h  endian.h
fp/test/: test-d2f.c  test-d2iz.c  test-d2lz.c  test-d2uiz.c  test-d2ulz.c  test-daddsub.c  test-dcmp.c  test-ddiv.c  test-dmul.c  test-f2d.c  test-f2iz.c  test-f2lz.c  test-f2uiz.c  test-f2ulz.c  test-faddsub.c  test-fcmp.c  test-fdiv.c  test-fmul.c  test-i2d.c  test-i2f.c  test-l2d.c  test-l2f.c  test-ui2d.c  test-ui2f.c  test-ul2d.c  test-ul2f.c
math/: CMakeLists.txt  Dir.mk  README.md  cosf.c  dunder.c  e_exp2f.c  e_exp2f_data.c  e_expf.c  e_log2f.c  e_log2f_data.c  e_logf.c  e_logf_data.c  e_powf.c  e_powf_log2_data.c  e_rem_pio2.c  erf.c  erff.c  exp.c  exp10.c  exp2.c  exp2f.c  exp2f_data.c  exp_data.c  expf.c  funder.c  ieee_status.c  k_cos.c  k_sin.c  k_tan.c  log.c  log10f.c  log2.c  log2_data.c  log2f.c  log2f_data.c  log_data.c  logf.c  logf_data.c  math_config.h  math_err.c  (+44 more)
math/aarch64/: cospi_3u5.c  cospif_2u6.c  erfc_data.c  erfcf_data.c  finite_pow.h  poly_sve_f32.h  poly_sve_f64.h  sincospi_4u.c  sincospif_3u2.c  sinpi_3u5.c  sinpif_2u5.c  sv_acosf_1u4.c  sv_asinf_2u5.c  sv_asinhf_2u5.c  sv_atan2_2u5.c  sv_atan2f_3u.c  sv_atanf_2u9.c  sv_cbrt_2u.c  sv_erfc_1u8.c  sv_erff_2u.c  sv_exp10f_1u5.c  sv_exp2_2u.c  sv_exp2f_1u6.c  sv_expm1f_1u6.c  sv_expm1f_inline.h  sv_hypot_1u5.c  sv_log10_2u5.c  sv_log1p_inline.h  sv_log1pf_1u3.c  sv_log1pf_inline.h  sv_log_inline.h  sv_logf_3u4.c  sv_math.h  sv_powf_2u6.c  sv_sin_3u5.c  sv_sinh_3u.c  sv_tan_3u5.c  sv_tanhf_2u6.c  tanpi_2u5.c  tanpif_3u1.c  (+48 more)
math/aarch64/advsimd/: acos.c  acosf.c  acosh.c  acoshf.c  acospi.c  acospif.c  asin.c  asinf.c  asinh.c  asinhf.c  asinpi.c  asinpif.c  atan.c  atan2.c  atan2f.c  atan2pi.c  atan2pif.c  atanf.c  atanh.c  atanhf.c  atanpi.c  atanpif.c  cbrtf.c  cexpi.c  cexpif.c  cexpipi.c  cexpipif.c  cos.c  cosf.c  cosh.c  coshf.c  cospi.c  cospif.c  cr_expf.c  erf.c  erfc.c  erfcf.c  erff.c  exp.c  exp10.c  (+71 more)
math/aarch64/experimental/: erfinv_24u5.c  exp_inline.h  expm1_2u5.c  expm1f_1u6.c  log10_2u.c  tanh_3u.c  tanhf_2u6.c
math/aarch64/experimental/advsimd/: cosf_umax.c  erfinv_25u.c  erfinvf_5u.c  expf_umax.c  powf_umax.c  sinf_umax.c
math/aarch64/experimental/sve/: cosf_umax.c  erfinv_25u.c  erfinvf_5u.c  expf_umax.c  powf_umax.c  powif.c  sinf_umax.c  sv_expf_inline.h
math/aarch64/sve/: acos.c  acosf.c  acosh.c  acoshf.c  acospi.c  acospif.c  asin.c  asinf.c  asinh.c  asinhf.c  asinpi.c  asinpif.c  atan.c  atan2.c  atan2f.c  atan2pi.c  atan2pif.c  atanf.c  atanh.c  atanhf.c  atanpi.c  atanpif.c  cbrt.c  cbrtf.c  cexpi.c  cexpif.c  cexpipi.c  cexpipif.c  cos.c  cosf.c  cosh.c  coshf.c  cospi.c  cospif.c  erf.c  erfc.c  erfcf.c  erff.c  exp.c  exp10.c  (+69 more)
math/include/: arm_math.h  mathlib.h  test_defs.h  test_sig.h
math/single/: dunder.c  e_expf.c  e_logf.c  e_powf.c  e_rem_pio2.c  funder.c  ieee_status.c  math_private.h  poly.c  rredf.c  rredf.h  s_cosf.c  s_sincosf.c  s_sinf.c  s_tanf.c
math/test/: c23_references.h  mathbench.c  mathbench_funcs.h  mathbench_wrappers.h  mathtest.c  runulp.sh  test_defs.h  trigpi_references.h  ulp.c  ulp.h  ulp_funcs.h  ulp_wrappers.h
math/test/rtest/: intern.h  random.c  semi.c  wrappers.c
math/test/testcases/directed/: cosf.tst  erff.tst  exp.tst  log2.tst  logf.tst  pow.tst  powf.tst  sinf.tst
math/test/testcases/random/: double.tst  float.tst
math/tools/: asinpif.sollya  atan.sollya  atanpi.sollya  exp10.sollya  exp10f.sollya  exp10m1.sollya  exp10m1f.sollya  exp2.sollya  exp2f.sollya  exp2m1.sollya  exp2m1f.sollya  expf.sollya  expm1.sollya  log10p1.sollya  log10p1f.sollya  log2p1.sollya  log2p1f.sollya  plot.py  remez.jl  sinf.sollya  tgamma128_gen.jl  trig_fallback.sollya  trig_fallbackf.sollya
networking/: .clang-format  Dir.mk  README.md
networking/test/: chksum.c
pl/math/: Dir.mk  acos_2u.c  acosf_1u4.c  acosh_3u.c  acoshf_2u8.c  asin_3u.c  (+459 more)
string/: Dir.mk  README.md  asmdefs.h  memchr.S  memcmp.S  memcpy.S  memcpy_bytewise.S  memmove.S  memset.S  pacbti.h  strchr.S  strchrnul.S  strcmp.S  strcpy-c.c  strcpy.S  strlen.S  strncmp.S  strnlen.S  strrchr.S
test/: CMakeLists.txt  mathbench.c  mathtest.c  runtest.sh  runulp.sh
test/rtest/: CMakeLists.txt  dotest.c  intern.h  main.c  random.c  random.h  semi.c  semi.h  types.h  wrappers.c  wrappers.h
test/testcases/directed/: .directory  cos.tst  cosf.tst  exp.tst  exp2.tst  exp2f.tst  expf.tst  log.tst  log2.tst  log2f.tst  logf.tst  pow.tst  powf.tst  rred.tst  rred2.tst  rred3.tst  rred4.tst  rred5.tst  rredf.tst  sin.tst  sincosf.tst  sinf.tst  tan.tst  tanf.tst
test/testcases/random/: double.tst  float.tst
(+174 files in other folders)
